k8s/mongodb.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      role: backend
      env: dev
  strategy: {}
  template:
    metadata:
      labels:
        role: backend
        env: dev
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: "/data/db"
            name: mongodb-storage
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
