k8s/node.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      role: api
      env: dev
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        role: api
        env: dev
    spec:
      containers:
      - image: lucassha/nodejwt:v4
        name: node
        ports:
        - containerPort: 3000
        # readinessProbe:
        #   tcpSocket: 
        #     port: 27017
        #   initialDelaySeconds: 30
        #   periodSeconds: 5
