k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    role: api
  ports:
    - port: 3000
      targetPort: 3000
